--- a/custom_components/blueprint/manifest.json
+++ b/custom_components/blueprint/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "blueprint",
   "name": "Blueprint",
-  "documentation": "https://github.com/custom-components/blueprint/blob/master/README.md",
+  "documentation": "https://github.com/custom-components/blueprint",
   "dependencies": [],
   "codeowners": ["@ludeeus"],
-  "requirements": []
+  "requirements": ["sampleclient==0.0.1"]
 }
