--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN python -m pip install --upgrade colorlog black
+RUN python -m pip install --upgrade colorlog black pylint
 RUN python -m pip install --upgrade git+git://github.com/home-assistant/home-assistant.git@dev
 RUN cd && mkdir -p /config/custom_components
 
