Adds "tabnine.tabnine-vscode" to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 		"GIT_EDTIOR='code --wait'"
 	],
 	"extensions": [
-		"ms-python.python"
+		"ms-python.python",
+		"tabnine.tabnine-vscode"
 	],
 	"settings": {
 		"python.pythonPath": "/usr/local/bin/python",
