--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -5,9 +5,17 @@ on:
     - cron:  '0 0 * * *'
 
 jobs:
-  hassfest:
+  validate:
     runs-on: "ubuntu-latest"
-    name: Validate with hassfest
+    name: Validate
     steps:
         - uses: "actions/checkout@v2"
-        - uses: "home-assistant/actions/hassfest@master"
+
+        - name: HACS validation
+          uses: "hacs/integration/action@master"
+          with:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            CATEGORY: "integration"
+
+        - name: Hassfest validation
+          uses: "home-assistant/actions/hassfest@master"
