--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -4,12 +4,20 @@ on:
   pull_request:
 
 jobs:
-  hassfest:
+  validate:
     runs-on: "ubuntu-latest"
-    name: Validate with hassfest
+    name: Validate
     steps:
         - uses: "actions/checkout@v2"
-        - uses: "home-assistant/actions/hassfest@master"
+
+        - name: HACS validation
+          uses: "hacs/integration/action@master"
+          with:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            CATEGORY: "integration"
+
+        - name: Hassfest validation
+          uses: "home-assistant/actions/hassfest@master"
 
   style:
     runs-on: "ubuntu-latest"
