--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -1,5 +1,9 @@
 default_config:
+
+automation: !include automations.yaml
+
 logger:
   default: error
   logs:
     custom_components.blueprint: debug
+
