--- a/custom_components/blueprint/manifest.json
+++ b/custom_components/blueprint/manifest.json
@@ -2,12 +2,11 @@
   "domain": "blueprint",
   "name": "Blueprint",
   "documentation": "https://github.com/custom-components/blueprint",
+  "issue_tracker": "https://github.com/custom-components/blueprint/issues",
   "dependencies": [],
   "config_flow": true,
   "codeowners": [
     "@ludeeus"
   ],
-  "requirements": [
-    "sampleclient"
-  ]
+  "requirements": []
 }
