--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -5,5 +5,5 @@ logger:
   logs:
     custom_components.integration_blueprint: debug
 
-# If you need to debug uncommment the line below (doc: https://www.home-assistant.io/integrations/debugpy/)
+# If you need to debug uncomment the line below (doc: https://www.home-assistant.io/integrations/debugpy/)
 # debugpy:
