--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-.DS_Store
-
+# artifacts
 __pycache__
-pythonenv*
-venv
-.venv
+.pytest*
+*.egg-info
+*/build/*
+*/dist/*
+
+
+# misc
+.DS_Store
 .coverage
-.idea
+.vscode
+coverage.xml
+
+
+# Home Assistant configuration
+.cloud
+.HA_VERSION
+.storage
+automations.yaml
+blueprints
+configuration.yaml
+deps
+home-assistant_v2*
+home-assistant.log*
+tts
+scenes.yaml
+scripts.yaml
+secrets.yaml
