--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   hassfest:
-    name: "HACS Validation"
+    name: "Hassfest Validation"
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
