--- a/custom_components/integration_blueprint/manifest.json
+++ b/custom_components/integration_blueprint/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "integration_blueprint",
   "name": "Integration blueprint",
-  "documentation": "https://github.com/custom-components/integration_blueprint",
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/custom-components/integration_blueprint/issues",
-  "version": "0.0.0",
-  "config_flow": true,
   "codeowners": [
     "@ludeeus"
-  ]
+  ],
+  "config_flow": true,
+  "documentation": "https://github.com/ludeeus/integration_blueprint",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
+  "version": "0.0.0"
 }
