--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,22 +12,22 @@ on:
       - "main"
 
 jobs:
-  hassfest:
+  hassfest: # https://developers.home-assistant.io/blog/2020/04/16/hassfest
     name: "Hassfest Validation"
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
-          uses: "actions/checkout@v3"
+          uses: "actions/checkout@v3.3.0"
 
         - name: "Run hassfest validation"
           uses: "home-assistant/actions/hassfest@master"
 
-  hacs:
+  hacs: # https://github.com/hacs/action
     name: "HACS Validation"
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
-          uses: "actions/checkout@v3"
+          uses: "actions/checkout@v3.3.0"
 
         - name: "Run HACS validation"
           uses: "hacs/action@main"
