--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -33,6 +33,7 @@ jobs:
           uses: "hacs/action@main"
           with:
             category: "integration"
+            # Remove 'ignore' key this when you have added brand images for your integration to https://github.com/home-assistant/brands
             ignore: "brands"
 
 
