--- a/custom_components/lightener/manifest.json
+++ b/custom_components/lightener/manifest.json
@@ -3,6 +3,8 @@
     "name": "Lightener",
     "version": "0.0.1",
     "codeowners": ["@fredck"],
+    "documentation": "https://github.com/fredck/lightener/blob/master/README.md",
+    "issue_tracker": "https://github.com/fredck/lightener/issues",
     "integration_type": "hub",
     "iot_class": "local_push"
   }
