--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -37,6 +37,6 @@
     },
     "remoteUser": "vscode",
     "features": {
-        "rust": "latest"
+        "ghcr.io/devcontainers/features/rust:1": {}
     }
 }
