--- a/custom_components/lightener/manifest.json
+++ b/custom_components/lightener/manifest.json
@@ -2,6 +2,7 @@
   "domain": "lightener",
   "name": "Lightener",
   "codeowners": ["@fredck"],
+  "config_flow": true,
   "documentation": "https://github.com/fredck/lightener/blob/master/README.md",
   "integration_type": "hub",
   "iot_class": "local_push",
