--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,17 @@ __pycache__
 */build/*
 */dist/*
 
-
 # misc
 .DS_Store
 .coverage
-.vscode
 coverage.xml
 
+# Visual Studio Code
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.default.json
+!.vscode/tasks.json
 
 # Home Assistant configuration
 config/*
