--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,10 @@ colorlog==6.7.0
 homeassistant==2023.5.2
 pip>=21.0,<23.2
 ruff==0.0.265
+
+# For tests
+coverage==7.2.3
+pytest
+pytest-asyncio
+pytest-cov
+pytest-homeassistant-custom-component
