Revamp of the Lightener entity class so it now inherits all the goodies from the Group integration

--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -28,6 +28,8 @@ light:
         turn_on:
         turn_off:
         set_level:
+        set_temperature:
+        set_color:
 
   # This is the Lightener v1 configuration example.
   # Although *still* supported it has been replaced by UI configuration with v2.
