--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,11 +1,11 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Run Home Assistant on port 8123",
-            "type": "shell",
-            "command": "scripts/develop",
-            "problemMatcher": []
-        }
-    ]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Install requirements.txt dependencies",
+      "type": "shell",
+      "command": "scripts/setup",
+      "problemMatcher": []
+    }
+  ]
 }
