--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 colorlog==6.7.0
-homeassistant==2023.5.4
+homeassistant==2023.6.0
 pip>=21.0,<23.2
 ruff==0.0.270
 
 # For tests
-coverage==7.2.7
-pytest
-pytest-asyncio
-pytest-cov
-pytest-homeassistant-custom-component
+pytest==7.3.1
+pytest-homeassistant-custom-component==0.13.36
