--- a/custom_components/lightener/manifest.json
+++ b/custom_components/lightener/manifest.json
@@ -1,11 +1,13 @@
 {
   "domain": "lightener",
   "name": "Lightener",
-  "codeowners": ["@fredck"],
+  "codeowners": [
+    "@fredck"
+  ],
   "config_flow": true,
   "documentation": "https://github.com/fredck/lightener/blob/master/README.md",
   "integration_type": "hub",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/fredck/lightener/issues",
-  "version": "2.1.2"
+  "version": "2.2.0"
 }
