--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 colorlog==6.7.0
-homeassistant==2023.6.0
+homeassistant==2023.10.5
 pip>=21.0,<23.3
 ruff==0.1.1
 
 # For tests
-pytest==7.4.2
+pytest>=7.3.1
 pytest-homeassistant-custom-component==0.13.68
