--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,27 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Home Assistant",
-      "type": "python",
-      "request": "launch",
-      "module": "homeassistant",
-      "justMyCode": false,
-      "args": [
-        "--debug",
-        "-c",
-        "config"
-      ]
-    },
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Home Assistant: Local",
+            "type": "python",
+            "request": "launch",
+            "module": "homeassistant",
+            "justMyCode": false,
+            "args": [
+                "--debug",
+                "--config",
+                "${workspaceFolder}/config"
+            ],
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}"
+            },
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Debug Unit Test",
+            "type": "python",
+            "request": "test",
+            "justMyCode": false
+        }
+    ]
 }
