--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-colorlog==6.7.0
-homeassistant==2023.10.5
-pip>=21.0,<23.4
-ruff==0.1.1
+colorlog>=6.8.0
+homeassistant==2023.12.1
+pip>=21.3.1
+ruff==0.1.7
 
 # For tests
-pytest>=7.3.1
-pytest-homeassistant-custom-component==0.13.68
+pytest==7.4.3
+pytest-asyncio==0.21.0
+pytest_homeassistant_custom_component==0.13.83
