--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,12 @@
+[flake8]
+ignore = E501, W503
+max-line-length = 88
+exclude =
+    .git,
+    __pycache__,
+    build,
+    dist
+
 [tool:pytest]
 testpaths = tests/components/lightener
 asyncio_mode = auto
