--- a/custom_components/lightener/manifest.json
+++ b/custom_components/lightener/manifest.json
@@ -6,7 +6,7 @@
   ],
   "config_flow": true,
   "documentation": "https://github.com/fredck/lightener/blob/master/README.md",
-  "integration_type": "hub",
+  "integration_type": "device",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/fredck/lightener/issues",
   "version": "2.2.0"
