--- a/custom_components/lightener/manifest.json
+++ b/custom_components/lightener/manifest.json
@@ -1,13 +1,11 @@
 {
   "domain": "lightener",
   "name": "Lightener",
-  "codeowners": [
-    "@fredck"
-  ],
+  "codeowners": ["@fredck"],
   "config_flow": true,
   "documentation": "https://github.com/fredck/lightener/blob/master/README.md",
   "integration_type": "device",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/fredck/lightener/issues",
-  "version": "2.2.2"
+  "version": "2.3.0-beta.1"
 }
