--- a/custom_components/lightener/manifest.json
+++ b/custom_components/lightener/manifest.json
@@ -3,7 +3,7 @@
   "name": "Lightener",
   "codeowners": ["@fredck"],
   "config_flow": true,
-  "documentation": "https://github.com/fredck/lightener/blob/master/README.md",
+  "documentation": "https://github.com/fredck/lightener#readme",
   "integration_type": "device",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/fredck/lightener/issues",
